# RECO

./: README.md  download_data.sh  main.py  pyproject.toml
scripts/: compute_checkpoint_times.py  compute_error_rates.py
src/tp1/: benchmarker.py  model.py  pipeline.py  pipeline_cnn.py  pipeline_common.py  pipeline_mlp.py  pipeline_transformer.py  run_cnn.py  run_pipeline.py  run_transformer.py  test_mlp.py
src/tp1/CNN/: model.py
src/tp1/MLP/: data.py  model.py
src/tp1/TRANSFORMER/: decoder.py  embeddings.py  encoder.py  model.py
