[project]
name = "reco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg<8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "soundfile>=0.13.1",
    "torch==2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec==0.7.0",
]
